--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-# Code owners file.
+# Code KSD Myanmar Distribution file.
 # This file controls who is tagged for review for any given pull request.
 #
 # For syntax help see:
